--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,5 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: MAKE
-      run: ./MAKE.sh
+    - name: make
+      run: make
+    - name: make clean
+      run: make clean
+    - name: make check
+      run: make check
